# particles

./: LICENSE  README.md  flake.nix  particles.cabal
src/: IdCtx.hs  Particle.hs  Point.hs  World.hs
test/: Spec.hs  TestIdCtx.hs  TestParticle.hs  TestWorld.hs
