cabal-version:      3.0
name:               particles
version:            0.1.0.0
synopsis:           particle interaction simulator in haskell

-- A longer description of the package.
-- description:
homepage:           https://github.com/jali-clarke/particles

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             jali-clarke
maintainer:         jinnah.ali-clarke@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        IdCtx,
        Particle,
        World

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,

        containers == 0.6.4.1,
        mtl == 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Werror -Wextra

executable particles
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        particles,
        base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Werror -Wextra -O2

test-suite particles-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        TestIdCtx
        TestParticle
        TestWorld
    build-depends:
        particles,

        base ^>=4.14.1.0,
        hspec == 2.7.10
    ghc-options: -Wall -Werror -Wextra

benchmark bench
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Bench.hs
    build-depends:
        particles,

        base ^>=4.14.1.0,
        criterion == 1.5.9.0
    ghc-options: -Wall -Werror -Wextra -O2
